--- a/static/css/style.css
+++ b/static/css/style.css
@@ -200,6 +200,7 @@ section {
 
 #acc-pst-det {
 	color: #f0ad4e;
+	text-shadow: 0px 0px 7px rgba(0,0,0,1), 0px 0px 7px rgba(0,0,0,1), 0px 0px 7px rgba(0,0,0,1), 0px 0px 7px rgba(0,0,0,1);
 }
 
 .image-overlay2 {
