--- a/templates/image_post.html
+++ b/templates/image_post.html
@@ -102,7 +102,7 @@
         <div class="card-body">
           <p>{{ comment.body }}</p>
           {% if user.is_authenticated and comment.name == user.username %}
-          <a href="{% url 'comment_delete' pk=comment.pk %}" class="btn btn-danger btn-sm float-right">Delete</a>
+          <a href="{% url 'comment_delete' pk=comment.pk %}" class="btn btn-warning btn-sm float-right" onclick="return confirm('Are you sure you want to delete this comment?')">Delete</a>
           {% endif %}
         </div>
       </div>
