--- a/templates/500.html
+++ b/templates/500.html
@@ -24,9 +24,9 @@
     <div class="row d-flex justify-content-center">
         <div class="md-4">
             <div class="error-box text-uppercase">
-                <p>Whoa there traveler...</p>
-                <p>Looks like you've got lost.</p>
-                <p>Navigate back to the homepage before its too late !</p>
+                <p>Looks like we're having trouble</p>
+                <p>Please navigate back to the site</p>
+                <p>While we employ more mice to power the machines!</p>
             </div>
         </div>
     </div>
