--- a/static/css/style.css
+++ b/static/css/style.css
@@ -133,6 +133,7 @@ hr {
 
 /* FOOTER STYLES */
 .wrapper {
+	margin-top: 5%;
 	min-height: 40%;
 	margin-bottom: -100px;
 }
@@ -211,17 +212,14 @@ section {
 	background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0));
 }
 
-#acc-pst-det {
-	color: #f0ad4e;
-	text-shadow: 0px 0px 7px rgba(0,0,0,1), 0px 0px 7px rgba(0,0,0,1), 0px 0px 7px rgba(0,0,0,1), 0px 0px 7px rgba(0,0,0,1);
-}
-
 .image-overlay2 {
+	opacity: 0;
 	position: absolute;
 	bottom: 0;
 	min-width: 100%;
 	background-color: #ffffff00;
 }
+
 
 .image-overlay2 i {
 	padding: 0 7px 0 7px;
@@ -303,13 +301,28 @@ section {
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, 1), 2px 2px 4px rgba(0, 0, 0, 0.8), 3px 3px 5px rgba(0, 0, 0, 0.6);
 }
 
-.author {
+.gallery-author {
+	opacity: 0;
 	font-family: 'Poppins', sans-serif;
-	font-weight: 500;
+	font-weight: 300;
 	margin: 4px;
 	text-transform: uppercase;
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, 1), 2px 2px 4px rgba(0, 0, 0, 0.8), 3px 3px 5px rgba(0, 0, 0, 0.6);
 }
+
+
+.title-opacity:hover .gallery-author, .title-opacity:hover .image-overlay2 {
+	animation: fade-in 0.6s ease-out forwards;
+}
+
+@keyframes fade-in {
+	from {
+	  opacity: 0;
+	}
+	to {
+	  opacity: 1;
+	}
+  }
 
 .gallery-likes {
 	position: absolute;
@@ -353,7 +366,6 @@ section {
 	column-gap: var(--column-gap);
 	column-count: var(--column-count-small);
 	column-width: calc(1 / var(--column-count-small) * 100%);
-	margin-bottom: 100px;
 }
 
 /* MASONRY MEDIA QUERIES */
@@ -529,8 +541,24 @@ section {
 
 /* ACCOUNT PAGE STYLE */
 
+.author {
+	font-family: 'Poppins', sans-serif;
+	font-weight: 300;
+	margin: 4px;
+	text-transform: uppercase;
+	text-shadow: 1px 1px 2px rgba(0, 0, 0, 1), 2px 2px 4px rgba(0, 0, 0, 0.8), 3px 3px 5px rgba(0, 0, 0, 0.6);
+}
+
+#acc-pst-det {
+	color: #f0ad4e;
+	margin: 0 0 4px 8px;
+	font-size: small;
+	text-shadow: 0px 0px 7px rgba(0,0,0,1), 0px 0px 7px rgba(0,0,0,1), 0px 0px 7px rgba(0,0,0,1), 0px 0px 7px rgba(0,0,0,1);
+}
+
 .accnt-page-header {
-	margin: 2rem 0;
+	margin: 2rem 0 1rem 0;
+	border-bottom: 1px solid #f0ad4e;
 }
 
 .accnt-page-header a .btn {
@@ -544,6 +572,12 @@ section {
 
 .accnt-page-header p {
 	font-family: 'Poppins', sans-serif;
+}
+
+.acnt-text {
+	font-family: 'Poppins', sans-serif;
+	color: #f0ad4e;
+	align-self: flex-start;
 }
 
 .updte-page-form-style label {
@@ -574,8 +608,17 @@ section {
 	margin: 2% 3%;
 }
 
-.emptypost-div {
-	padding: 40% 0;
-	color: #f0ad4e;
-	font-family: 'Julius Sans One', sans-serif;
+.acc-btn-div a:nth-child(1) {
+	margin: 0 0 7px 7px;
+}
+.acc-btn-div a:nth-child(2) {
+	float: right;
+	margin-right: 7px;
+}
+
+.account-overlay2 {
+	position: absolute;
+	bottom: 0;
+	min-width: 100%;
+	background-color: #ffffff00;
 }
