--- a/templates/account.html
+++ b/templates/account.html
@@ -3,18 +3,18 @@
 <main class="gallery-pad">
 
   <div class="container-fluid accnt-page-header">
-    <!-- checks for superuser to show button to access admin panel -->
-
     <h3>Account Name: {{ user.username }}</h3>
+    <p>MORE ACCOUNT INFORMATION COMING SOON!</p>
+    <!-- checks for superuser to show button to access admin panel -->
     {% if request.user.is_superuser %}
     <a href="{% url 'admin:index' %}">
       <button class="btn btn-danger">Admin Panel</button>
     </a>
-    {% endif %}
-    <p>MORE ACCOUNT INFORMATION COMING SOON!</p>
   </div>
   <p class="text-uppercase acnt-text" style="margin-left: 15px;">Draft post list:</p>
-  
+  {% endif %}
+
+
   <!-- checks for superuser to populate draft post list -->
   {% if request.user.is_superuser %}
   <div class="masonry-container">
@@ -23,50 +23,48 @@
       {% for post in post_list %}
       {% if post.status == 0 %}
       <div id="img-spacer">
-      <div id="card-container masonry-brick">
-        <div class="d-flex justify-content-center">
+        <div id="card-container masonry-brick">
+          <div class="d-flex justify-content-center">
 
-          <div class="card img-card-acc h-100">
+            <div class="card img-card-acc h-100">
 
-            <div class="image-container">
-              {% if "placeholder" in post.featured_image.url %}
-              <img src="https://via.placeholder.com/384x512" class="card-img-top" alt="...">
-              {% else %}
-              <img class="card-img" src=" {{ post.featured_image.url }}">
-              {% endif %}
-            </div>
-
-            <div class="image-overlay">
-              <p class="author">{{ post.title }}</p>      
-            </div>
-
-            <div class="account-overlay2">
-              {% if post.status == 1 %}
-              <!-- displays current status and allows deletion or updating -->
-              <div id="acc-pst-det">POST STATUS: PUBLISHED</div>
-              {% else %}
-              <div id="acc-pst-det">POST STATUS: DRAFT</div>
-              {% endif %}
-              <div class="acc-btn-div">
-                {% if request.user == post.author %}
-                <a href="{% url 'toggle_post_status' post.id %}" class="btn btn-warning btn-sm">Publish</a>
+              <div class="image-container">
+                {% if "placeholder" in post.featured_image.url %}
+                <img src="https://via.placeholder.com/384x512" class="card-img-top" alt="...">
+                {% else %}
+                <img class="card-img" src=" {{ post.featured_image.url }}">
                 {% endif %}
               </div>
-            </div>
 
+              <div class="image-overlay">
+                <p class="author">{{ post.title }}</p>
+              </div>
+
+              <div class="account-overlay2">
+                {% if post.status == 1 %}
+                <!-- displays current status and allows publishing -->
+                <div id="acc-pst-det">POST STATUS: PUBLISHED</div>
+                {% else %}
+                <div id="acc-pst-det">POST STATUS: DRAFT</div>
+                {% endif %}
+                <div class="acc-btn-div">
+                  {% if request.user == post.author %}
+                  <a href="{% url 'toggle_post_status' post.id %}" class="btn btn-warning btn-sm">Publish</a>
+                  {% endif %}
+                </div>
+              </div>
+
+            </div>
           </div>
         </div>
       </div>
-    </div>
       {% endif %}
       {% endfor %}
     </div>
   </div>
   {% endif %}
 
-
-  <hr style="width: 100%;">
-  <div class="container-fluid">
+  <div class="container-fluid acnt-text-div">
     <p class="text-uppercase acnt-text">User post list:</p>
   </div>
   <div class="masonry-container">
@@ -75,45 +73,47 @@
       {% for post in post_list %}
       {% if post.author == request.user %}
       <div id="img-spacer">
-      <div id="card-container masonry-brick">
-        <div class="d-flex justify-content-center">
+        <div id="card-container masonry-brick">
+          <div class="d-flex justify-content-center">
 
-          <div class="card img-card-acc h-100">
+            <div class="card img-card-acc h-100">
 
-            <div class="image-container">
-              {% if "placeholder" in post.featured_image.url %}
-              <img src="https://via.placeholder.com/384x512" class="card-img-top" alt="...">
-              {% else %}
-              <img class="card-img" src=" {{ post.featured_image.url }}">
-              {% endif %}
-            </div>
-
-            <div class="image-overlay">
-              <p class="author">{{ post.title }}</p>
-            </div>
-
-            <!-- shows likes and comments counter -->
-            <div class="account-overlay2">
-
-              {% if post.status == 1 %}
-              <!-- displays current status and allows deletion or updating -->
-              <div id="acc-pst-det">POST STATUS: PUBLISHED</div>
-              {% else %}
-              <div id="acc-pst-det">POST STATUS: DRAFT</div>
-              {% endif %}
-              <div class="acc-btn-div">
-                {% if request.user == post.author %}
-                <a href="{% url 'delete_post' post.slug %}" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this post?')">Delete</a>
-                <a href="{% url 'post_update' post.slug %}" class="btn btn-warning btn-sm" onclick="return confirm('Are you sure you want to update this post?')">Update</a>
+              <div class="image-container">
+                {% if "placeholder" in post.featured_image.url %}
+                <img src="https://via.placeholder.com/384x512" class="card-img-top" alt="...">
+                {% else %}
+                <img class="card-img" src=" {{ post.featured_image.url }}">
                 {% endif %}
               </div>
+
+              <div class="image-overlay">
+                <p class="author">{{ post.title }}</p>
+              </div>
+
+              <!-- shows likes and comments counter -->
+              <div class="account-overlay2">
+
+                {% if post.status == 1 %}
+                <!-- displays current status and allows deletion or updating -->
+                <div id="acc-pst-det">POST STATUS: PUBLISHED</div>
+                {% else %}
+                <div id="acc-pst-det">POST STATUS: DRAFT</div>
+                {% endif %}
+                <div class="acc-btn-div">
+                  {% if request.user == post.author %}
+                  <a href="{% url 'delete_post' post.slug %}" class="btn btn-danger btn-sm"
+                    onclick="return confirm('Are you sure you want to delete this post?')">Delete</a>
+                  <a href="{% url 'post_update' post.slug %}" class="btn btn-warning btn-sm"
+                    onclick="return confirm('Are you sure you want to update this post?')">Update</a>
+                  {% endif %}
+                </div>
+              </div>
+
             </div>
 
           </div>
-
         </div>
       </div>
-    </div>
       {% endif %}
       {% endfor %}
     </div>
