--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -8,8 +8,8 @@
 <div class="container-fluid">
   <hr>
   <div class="row d-flex justify-content-center">
-    <div class="mt-3">
-<h1>{% trans "Sign Out" %}</h1>
+    <div class="mt-3" style="text-align: center;">
+<h1 class="text-uppercase">{% trans "Sign Out" %}</h1>
 
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
