--- a/static/css/style.css
+++ b/static/css/style.css
@@ -385,15 +385,6 @@ section {
 	background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0));
 }
 
-.image-overlay2 {
-	opacity: 0;
-	position: absolute;
-	bottom: 0;
-	min-width: 100%;
-	background-color: #ffffff00;
-}
-
-
 .image-overlay2 i {
 	padding: 0 7px 0 7px;
 }
@@ -474,8 +465,14 @@ section {
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, 1), 2px 2px 4px rgba(0, 0, 0, 0.8), 3px 3px 5px rgba(0, 0, 0, 0.6);
 }
 
+.gallery-likes {
+	position: absolute;
+	right: 0;
+	margin-right: 5px;
+}
+
 .gallery-author {
-	opacity: 0;
+	opacity: 1;
 	font-family: 'Poppins', sans-serif;
 	font-weight: 300;
 	margin: 4px;
@@ -483,29 +480,15 @@ section {
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, 1), 2px 2px 4px rgba(0, 0, 0, 0.8), 3px 3px 5px rgba(0, 0, 0, 0.6);
 }
 
-
-.title-opacity:hover .gallery-author,
-.title-opacity:hover .image-overlay2 {
-	animation: fade-in 0.6s ease-out forwards;
-}
-
-@keyframes fade-in {
-	from {
-		opacity: 0;
-	}
-
-	to {
-		opacity: 1;
-	}
-}
-
-.gallery-likes {
+.image-overlay2 {
+	opacity: 1;
 	position: absolute;
-	right: 0;
-	margin-right: 5px;
+	bottom: 0;
+	min-width: 100%;
+	background-color: #ffffff00;
 }
 
-/* CARD MEDIA QUERIES */
+/* CARD MEDIA QUERIES only active above 768 to avoid touchscreen issues */
 @media only screen and (max-width: 1200px) {
 	.card-text:last-child {
 		font-size: small;
@@ -513,6 +496,41 @@ section {
 
 	.author {
 		font-size: small;
+	}
+}
+
+@media only screen and (min-width: 768px) {
+	.gallery-author {
+		opacity: 0;
+		font-family: 'Poppins', sans-serif;
+		font-weight: 300;
+		margin: 4px;
+		text-transform: uppercase;
+		text-shadow: 1px 1px 2px rgba(0, 0, 0, 1), 2px 2px 4px rgba(0, 0, 0, 0.8), 3px 3px 5px rgba(0, 0, 0, 0.6);
+	}
+	
+	.image-overlay2 {
+		opacity: 0;
+		position: absolute;
+		bottom: 0;
+		min-width: 100%;
+		background-color: #ffffff00;
+	}
+	
+	
+	.title-opacity:hover .gallery-author,
+	.title-opacity:hover .image-overlay2 {
+		animation: fade-in 0.6s ease-out forwards;
+	}
+	
+	@keyframes fade-in {
+		from {
+			opacity: 0;
+		}
+	
+		to {
+			opacity: 1;
+		}
 	}
 }
 
