--- a/templates/account.html
+++ b/templates/account.html
@@ -30,9 +30,9 @@
 
               <div class="image-container">
                 {% if "placeholder" in post.featured_image.url %}
-                <img src="https://via.placeholder.com/384x512" class="card-img-top" alt="...">
+                <img src="https://via.placeholder.com/384x512" class="card-img-top" alt="Placeholder image, no user image available" loading="lazy">
                 {% else %}
-                <img class="card-img" src=" {{ post.featured_image.url }}">
+                <img class="card-img" src=" {{ post.featured_image.url }}" alt="{{ post.title }}" loading="lazy">
                 {% endif %}
               </div>
 
@@ -80,9 +80,9 @@
 
               <div class="image-container">
                 {% if "placeholder" in post.featured_image.url %}
-                <img src="https://via.placeholder.com/384x512" class="card-img-top" alt="...">
+                <img src="https://via.placeholder.com/384x512" class="card-img-top" alt="Placeholder image, no user image available" loading="lazy">
                 {% else %}
-                <img class="card-img" src=" {{ post.featured_image.url }}">
+                <img class="card-img" src=" {{ post.featured_image.url }}" alt="{{ post.title }}" loading="lazy">
                 {% endif %}
               </div>
 
