--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -16,9 +16,9 @@
               <div class="card img-card h-100" data-aos="{{ post.slug }}">
                 <div class="image-container">
                   {% if "placeholder" in post.featured_image.url %}
-                  <img src="https://via.placeholder.com/384x512" class="card-img-top" alt="..." loading="lazy">
+                  <img src="https://via.placeholder.com/384x512" class="card-img-top" alt="Placeholder image, no user image available" loading="lazy">
                   {% else %}
-                  <img class="card-img" src="{{ post.featured_image.url }}" loading="lazy">
+                  <img class="card-img" src="{{ post.featured_image.url }}" alt="{{ post.title }}" loading="lazy">
                   {% endif %}
                 </div>
                 <!-- overlays which contain the likes and comments displays -->
