--- a/templates/base.html
+++ b/templates/base.html
@@ -16,19 +16,18 @@
 </head>
 
 <body class="bg-dark">
-
-  <!-- alert div -->
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 offset-md-4">
-        {% for message in messages %}
-        <div class="alert {{ message.tags }} fade show" id="msg" role="alert">
-          {{ message | safe }}
+    <!-- alert div -->
+    <div class="container-fluid">
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-4" style="z-index: 10; position: absolute;">
+          {% for message in messages %}
+          <div class="alert {{ message.tags }} fade show" id="msg" role="alert">
+            {{ message | safe }}
+          </div>
+          {% endfor %}
         </div>
-        {% endfor %}
       </div>
     </div>
-  </div>
 
   <!-- Navbar loads here using include -->
   {% include 'nav.html' %}
