--- a/templates/nav.html
+++ b/templates/nav.html
@@ -10,12 +10,12 @@
   <nav class="navbar bg-dark navbar-items">
     <a class="navbar-brand" href="{% url 'home' %}">Promptiverse</a>
     <div class="ml-auto">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav flex-row d-flex">
         <li class="nav-item">
-          <a class="nav-link text-uppercase" href="{% url 'account_logout' %}">Logout</a>
+          <a class="nav-link text-uppercase" id="nav-items" href="{% url 'account_logout' %}">Logout</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-uppercase" href="{% url 'account_posts' %}">Account</a>
+          <a class="nav-link text-uppercase" id="nav-items" href="{% url 'account_posts' %}">Account</a>
         </li>
       </ul>
     </div>
@@ -23,14 +23,14 @@
 
   <!-- gallery or submissions pages -->
   <nav class="navbar sub-nav-col navbar-items">
-    <div class="container-fluid">
+    <div class="container-fluid sub-nav-bar">
       <div class="mr-auto">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav flex-row d-flex">
           <li class="nav-item">
-            <a class="nav-link sub-nav-links text-uppercase" href="{% url 'home' %}">Gallery</a>
+            <a class="nav-link sub-nav-links text-uppercase" id="nav-items" href="{% url 'home' %}">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link sub-nav-links text-uppercase" href="{% url 'create_post' %}">Submit</a>
+            <a class="nav-link sub-nav-links text-uppercase" id="nav-items" href="{% url 'create_post' %}">Submit</a>
           </li>
         </ul>
       </div>
@@ -47,12 +47,12 @@
     <nav class="navbar bg-dark navbar-items">
       <a class="navbar-brand" href="{% url 'home' %}">Promptiverse</a>
       <div class="ml-auto">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav flex-row d-flex">
           <li class="nav-item">
-            <a class="nav-link text-uppercase" href="{% url 'account_login' %}">Login</a>
+            <a class="nav-link text-uppercase" id="nav-items" href="{% url 'account_login' %}">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-uppercase" href="{% url 'account_signup' %}">Signup</a>
+            <a class="nav-link text-uppercase" id="nav-items" href="{% url 'account_signup' %}">Signup</a>
           </li>
         </ul>
       </div>
