--- a/templates/500.html
+++ b/templates/500.html
@@ -11,8 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
-  <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}"> -->
-  <link rel="stylesheet" href="../static/css/style.css">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 </head>
 
