--- a/templates/nav.html
+++ b/templates/nav.html
@@ -12,10 +12,10 @@
     <div class="ml-auto">
       <ul class="navbar-nav flex-row d-flex">
         <li class="nav-item">
-          <a class="nav-link text-uppercase" id="nav-items" href="{% url 'account_logout' %}">Logout</a>
+          <a class="nav-link text-uppercase" id="nav-item1" href="{% url 'account_logout' %}">Logout</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-uppercase" id="nav-items" href="{% url 'account_posts' %}">Account</a>
+          <a class="nav-link text-uppercase" id="nav-item2" href="{% url 'account_posts' %}">Account</a>
         </li>
       </ul>
     </div>
@@ -27,10 +27,10 @@
       <div class="mr-auto">
         <ul class="navbar-nav flex-row d-flex">
           <li class="nav-item">
-            <a class="nav-link sub-nav-links text-uppercase" id="nav-items" href="{% url 'home' %}">Gallery</a>
+            <a class="nav-link sub-nav-links text-uppercase" id="nav-item3" href="{% url 'home' %}">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link sub-nav-links text-uppercase" id="nav-items" href="{% url 'create_post' %}">Submit</a>
+            <a class="nav-link sub-nav-links text-uppercase" id="nav-item4" href="{% url 'create_post' %}">Submit</a>
           </li>
         </ul>
       </div>
@@ -49,10 +49,10 @@
       <div class="ml-auto">
         <ul class="navbar-nav flex-row d-flex">
           <li class="nav-item">
-            <a class="nav-link text-uppercase" id="nav-items" href="{% url 'account_login' %}">Login</a>
+            <a class="nav-link text-uppercase" id="nav-item5" href="{% url 'account_login' %}">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-uppercase" id="nav-items" href="{% url 'account_signup' %}">Signup</a>
+            <a class="nav-link text-uppercase" id="nav-item6" href="{% url 'account_signup' %}">Signup</a>
           </li>
         </ul>
       </div>
