--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,7 @@
 </div>
 
 <!-- This is the modal about section -->
-<div class="modal fade" id="aboutModal" tabindex="-1" role="dialog" aria-labelledby="aboutModalLabel"
-  aria-hidden="true">
+<div class="modal fade" id="aboutModal" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-padding">
       <div class="modal-content bg-dark">
@@ -57,7 +56,7 @@
         <div class="col-lg-12 text-center">
           <h2 class="text-uppercase section-heading">About</h2>
           <h4 class="muted-text-pad section-subtext" id="about-text">Welcome to our AI art gallery, where creators showcase their
-            AI-generated artwork...</h3>
+            AI-generated artwork...</h4>
         </div>
       </div>
       <div class="row text-center">
